@@ -3,7 +3,9 @@
 	* generic/tclInt.h: remove comments refering to VAR_SCALAR, as
 	that flag bit does not exist any longer.
 	* generic/tclProc.c (InitCompiledLocals): removed optimisation for
-	non-resolved case, as the function is never called in that case.
+	non-resolved case, as the function is never called in that
+	case. Renamed the function to InitResolvedLocals to calrify the
+	point. 
 
 2007-08-07  Miguel Sofer  <msofer@users.sf.net>
 
